--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,16 @@
 [submodule "linked/vim-pathogen"]
 	path = linked/vim-pathogen
 	url = https://github.com/tpope/vim-pathogen
+    ignore = dirty
 [submodule "typescript-vim"]
 	path = typescript-vim
 	url = https://github.com/leafgarland/typescript-vim
+    ignore = dirty
 [submodule "linked/tsuquyomi"]
 	path = linked/tsuquyomi
 	url = https://github.com/Quramy/tsuquyomi
+    ignore = dirty
 [submodule "linked/csv.vim"]
 	path = linked/csv.vim
 	url = https://github.com/chrisbra/csv.vim
+    ignore = dirty
