--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
     path = linked/typescript-vim
     url = https://github.com/leafgarland/typescript-vim
     ignore = dirty
+[submodule "linked/vim-es6"]
+	path = linked/vim-es6
+	url = https://github.com/isRuslan/vim-es6
