--- a/lib/.tmux.conf
+++ b/lib/.tmux.conf
@@ -1,1 +1,7 @@
 set -g default-terminal "screen-256color"
+setw -g mouse on
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
