--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 [submodule "linked/vim-go"]
 	path = linked/vim-go
 	url = https://github.com/fatih/vim-go
+[submodule "linked/vim-tslint"]
+	path = linked/vim-tslint
+	url = https://github.com/heavenshell/vim-tslint
