--- a/.gitmodules
+++ b/.gitmodules
@@ -38,3 +38,9 @@
 [submodule "linked/vim-svelte"]
 	path = linked/vim-svelte
 	url = https://github.com/evanleck/vim-svelte
+[submodule "linked/vim-javascript"]
+	path = linked/vim-javascript
+	url = https://github.com/pangloss/vim-javascript
+[submodule "linked/html5.vim"]
+	path = linked/html5.vim
+	url = https://github.com/othree/html5.vim
